--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_PORT=YOUR_DB_PORT
 DB_USER=YOUR_USER
 DB_PASSWORD=YOUR_DB_PASSWORD
 DB_NAME=YOUR_DB_NAME
+SECRET_KEY = "YOUR_SECRET_KEY"
+ALGORITHM = "YOUR_CRYPTO_ALGORITHM"
+ACCESS_TOKEN_EXPIRE_MINUTES = 0
